// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reported Post call handleDelete 1`] = `
"Snapshot Diff:
- First value
+ Second value

  <View
    style={
-     Array [
      Object {
        \\"alignItems\\": \\"center\\",
-         \\"backgroundColor\\": \\"#ffffff\\",
-         \\"borderRadius\\": 8,
-         \\"elevation\\": 4,
-         \\"flexDirection\\": \\"row\\",
-         \\"marginHorizontal\\": 16,
-         \\"marginVertical\\": 8,
-         \\"shadowColor\\": \\"#000000\\",
-         \\"shadowOffset\\": Object {
-           \\"height\\": 2,
-           \\"width\\": 0,
-         },
-         \\"shadowOpacity\\": 0.3,
-         \\"shadowRadius\\": 2,
-       },
-       Object {
-         \\"alignItems\\": \\"flex-start\\",
-         \\"backgroundColor\\": \\"#ffffff\\",
-         \\"flexDirection\\": \\"column\\",
-         \\"marginBottom\\": 8,
-         \\"marginHorizontal\\": 20,
-         \\"marginVertical\\": 15,
-       },
-     ]
-   }
- >
-   <View
-     style={
-       Object {
-         \\"borderBottomColor\\": \\"#ECEEF2\\",
-         \\"borderBottomWidth\\": 1,
-         \\"flexDirection\\": \\"row\\",
-         \\"padding\\": 15,
-       }
-     }
-   >
-     <View
-       style={
-         Array [
-           Object {},
-           Object {
-             \\"flex\\": 1,
-           },
-         ]
-       }
-     >
-       <Text
-         style={
-           Array [
-             Object {
-               \\"color\\": \\"#505256\\",
-             },
-             Object {
-               \\"fontFamily\\": \\"SourceSansPro-Regular\\",
-             },
-             Object {
-               \\"color\\": \\"#A0A2A6\\",
-             },
-           ]
-         }
-       >
-         Reported By
-         :
-       </Text>
-       <Text
-         numberOfLines={1}
-         style={
-           Array [
-             Object {
-               \\"color\\": \\"#505256\\",
-             },
-             Object {
-               \\"fontFamily\\": \\"SourceSansPro-Regular\\",
-             },
-             Object {
-               \\"color\\": \\"#505256\\",
-             },
-           ]
-         }
-       >
-         Roscoe Johnson
-       </Text>
-       <Text
-         numberOfLines={1}
-         style={
-           Array [
-             Object {
-               \\"color\\": \\"#505256\\",
-             },
-             Object {
-               \\"fontFamily\\": \\"SourceSansPro-Regular\\",
-             },
-             Object {
-               \\"color\\": \\"#505256\\",
-             },
-           ]
-         }
-       >
-         Stand-alone asymmetric service-desk
-       </Text>
-     </View>
-     <Text
-       onPress={[Function handleOpenPost]}
-       style={
-         Array [
-           Object {
-             \\"color\\": \\"#505256\\",
-           },
-           Object {
-             \\"fontFamily\\": \\"SourceSansPro-Regular\\",
-           },
-           Object {
-             \\"color\\": \\"#3CC8E6\\",
-           },
-         ]
-       }
-     >
-       Open Post
-     </Text>
-   </View>
-   <View
-     style={
-       Object {
-         \\"paddingHorizontal\\": 20,
-         \\"paddingTop\\": 12,
-       }
-     }
-   >
-     <View
-       style={
-         Object {
-           \\"flexDirection\\": \\"row\\",
-           \\"justifyContent\\": \\"flex-start\\",
-           \\"paddingVertical\\": 8,
-         }
-       }
-     >
-       <View
-         style={
-           Array [
-             Object {
-               \\"alignItems\\": \\"center\\",
-               \\"borderRadius\\": 18,
-               \\"flexDirection\\": \\"row\\",
-               \\"height\\": 36,
-               \\"justifyContent\\": \\"space-between\\",
-               \\"paddingLeft\\": 20,
-               \\"paddingRight\\": 16,
-               \\"paddingVertical\\": 0,
-             },
-             Object {
-               \\"backgroundColor\\": \\"#FD726D\\",
-             },
-             null,
-             null,
-           ]
-         }
-         testID=\\"HELP_REQUESTLabel\\"
-       >
-         <SvgMock
-           color=\\"#ffffff\\"
-           height={20}
-           style={
-             Array [
-               Object {
-                 \\"marginLeft\\": -10,
-                 \\"marginRight\\": 10,
-               },
-               undefined,
-             ]
-           }
-           width={20}
-         />
-         <Text
-           style={
-             Array [
-               Object {
-                 \\"color\\": \\"#505256\\",
-               },
-               Object {
-                 \\"fontFamily\\": \\"SourceSansPro-Regular\\",
-               },
-               Object {
-                 \\"color\\": \\"#ffffff\\",
-                 \\"fontSize\\": 14,
-                 \\"lineHeight\\": 20,
-               },
-             ]
-           }
-         >
-           Community Need
-         </Text>
-       </View>
-     </View>
-     <View
-       style={
-         Object {
-           \\"flexDirection\\": \\"row\\",
-           \\"justifyContent\\": \\"flex-start\\",
-           \\"paddingVertical\\": 8,
-         }
-       }
-     >
-       <Image
-         resizeMode=\\"cover\\"
-         source={
-           Object {
-             \\"uri\\": \\"debitis et saepe\\",
-           }
-         }
-         style={
-           Array [
-             Object {
-               \\"borderRadius\\": 24,
-               \\"height\\": 48,
-               \\"width\\": 48,
-             },
-             Object {
-               \\"backgroundColor\\": \\"rgb(135, 155, 115)\\",
-             },
-             undefined,
-           ]
-         }
-       />
-       <View
-         style={
-           Object {
-             \\"alignItems\\": \\"flex-start\\",
+       \\"flex\\": 0.6,
        \\"flexDirection\\": \\"column\\",
        \\"justifyContent\\": \\"center\\",
-             \\"paddingHorizontal\\": 8,
      }
    }
  >
+   <SvgMock />
    <Text
      style={
        Array [
          Object {
            \\"color\\": \\"#505256\\",
          },
          Object {
            \\"fontFamily\\": \\"SourceSansPro-Regular\\",
-               },
-               Array [
-                 Object {
-                   \\"color\\": \\"#007398\\",
-                   \\"fontSize\\": 16,
          },
          Object {
            \\"color\\": \\"#505256\\",
-                   \\"fontSize\\": 16,
-                   \\"fontWeight\\": \\"bold\\",
-                   \\"lineHeight\\": 20,
+           \\"fontSize\\": 24,
+           \\"fontWeight\\": \\"300\\",
+           \\"lineHeight\\": 30,
+           \\"paddingVertical\\": 20,
          },
-               ],
        ]
      }
    >
-           Keaton Keeling
+     Hurray
    </Text>
    <Text
      style={
        Array [
          Object {
            \\"color\\": \\"#505256\\",
          },
          Object {
            \\"fontFamily\\": \\"SourceSansPro-Regular\\",
-               },
-               Array [
-                 Object {
-                   \\"color\\": \\"#B2B0B2\\",
-                   \\"fontSize\\": 12,
          },
          Object {
-                   \\"color\\": \\"#B4B6BA\\",
-                   \\"fontSize\\": 12,
-                   \\"lineHeight\\": 16,
-                 },
-               ],
-             ]
-           }
-           testID=\\"Text\\"
-         >
-           August 19, 2018 @ 2:06 PM
-         </Text>
-       </View>
-     </View>
-   </View>
-   <View
-     style={
-       Object {
-         \\"paddingHorizontal\\": 20,
-         \\"paddingVertical\\": 8,
-       }
-     }
-   >
-     <View
-       style={Object {}}
-     >
-       <View
-         style={
-           Object {
-             \\"marginVertical\\": 10,
-           }
-         }
-       >
-         <Text
-           style={
-             Object {
            \\"color\\": \\"#505256\\",
-               \\"fontFamily\\": \\"SourceSansPro-Regular\\",
-               \\"fontSize\\": 14,
-               \\"lineHeight\\": 18,
-             }
-           }
-         >
-           <Text>
-             et porro ut
-           </Text>
-         </Text>
-       </View>
-     </View>
-   </View>
-   <Image
-     resizeMode=\\"cover\\"
-     source={
-       Object {
-         \\"uri\\": \\"et ipsam explicabo\\",
-       }
-     }
-     style={
-       Object {
-         \\"aspectRatio\\": 2,
-       }
-     }
-   />
-   <View
-     style={
-       Array [
-         Object {
-           \\"paddingTop\\": 20,
-         },
-         Object {
-           \\"flexDirection\\": \\"row\\",
+           \\"fontSize\\": 16,
+           \\"lineHeight\\": 24,
          },
        ]
      }
    >
-     <View
-       style={
-         Array [
-           Object {},
-           Object {
-             \\"flex\\": 1,
-           },
-         ]
-       }
-     >
-       <View
-         accessible={true}
-         focusable={true}
-         isTVSelectable={true}
-         onClick={[Function bound touchableHandlePress]}
-         onResponderGrant={[Function bound touchableHandleResponderGrant]}
-         onResponderMove={[Function bound touchableHandleResponderMove]}
-         onResponderRelease={[Function bound touchableHandleResponderRelease]}
-         onResponderTerminate={[Function bound touchableHandleResponderTerminate]}
-         onResponderTerminationRequest={[Function bound touchableHandleResponderTerminationRequest]}
-         onStartShouldSetResponder={[Function bound touchableHandleStartShouldSetResponder]}
-         style={
-           Object {
-             \\"opacity\\": 1,
-           }
-         }
-         testID=\\"ignoreButton\\"
-       >
-         <View
-           style={
-             Array [
-               Object {
-                 \\"alignItems\\": \\"center\\",
-                 \\"backgroundColor\\": \\"#52C5DC\\",
-                 \\"height\\": 60,
-                 \\"justifyContent\\": \\"center\\",
-               },
-               null,
-               Object {
-                 \\"borderBottomLeftRadius\\": 8,
-                 \\"borderRightColor\\": \\"#ffffff\\",
-                 \\"borderRightWidth\\": 1,
-                 \\"height\\": 50,
-               },
-               null,
-             ]
-           }
-         >
-           <Text
-             style={
-               Array [
-                 Object {
-                   \\"color\\": \\"#505256\\",
-                 },
-                 Object {
-                   \\"fontFamily\\": \\"SourceSansPro-Regular\\",
-                 },
-                 Array [
-                   Object {
-                     \\"backgroundColor\\": \\"rgba(0,0,0,0)\\",
-                     \\"color\\": \\"#ffffff\\",
-                     \\"fontSize\\": 14,
-                     \\"fontWeight\\": \\"500\\",
-                     \\"letterSpacing\\": 1.5,
-                     \\"textAlign\\": \\"center\\",
-                   },
-                   Object {},
-                 ],
-               ]
-             }
-           >
-             IGNORE
+     You have successfully deleted the post.
    </Text>
-         </View>
-       </View>
-     </View>
-     <View
-       style={
-         Array [
-           Object {},
-           Object {
-             \\"flex\\": 1,
-           },
-         ]
-       }
-     >
-       <View
-         accessible={true}
-         focusable={true}
-         isTVSelectable={true}
-         onClick={[Function bound touchableHandlePress]}
-         onResponderGrant={[Function bound touchableHandleResponderGrant]}
-         onResponderMove={[Function bound touchableHandleResponderMove]}
-         onResponderRelease={[Function bound touchableHandleResponderRelease]}
-         onResponderTerminate={[Function bound touchableHandleResponderTerminate]}
-         onResponderTerminationRequest={[Function bound touchableHandleResponderTerminationRequest]}
-         onStartShouldSetResponder={[Function bound touchableHandleStartShouldSetResponder]}
-         style={
-           Object {
-             \\"opacity\\": 1,
-           }
-         }
-         testID=\\"deleteButton\\"
-       >
-         <View
-           style={
-             Array [
-               Object {
-                 \\"alignItems\\": \\"center\\",
-                 \\"backgroundColor\\": \\"#52C5DC\\",
-                 \\"height\\": 60,
-                 \\"justifyContent\\": \\"center\\",
-               },
-               null,
-               Object {
-                 \\"borderBottomRightRadius\\": 8,
-                 \\"height\\": 50,
-               },
-               null,
-             ]
-           }
-         >
-           <Text
-             style={
-               Array [
-                 Object {
-                   \\"color\\": \\"#505256\\",
-                 },
-                 Object {
-                   \\"fontFamily\\": \\"SourceSansPro-Regular\\",
-                 },
-                 Array [
-                   Object {
-                     \\"backgroundColor\\": \\"rgba(0,0,0,0)\\",
-                     \\"color\\": \\"#ffffff\\",
-                     \\"fontSize\\": 14,
-                     \\"fontWeight\\": \\"500\\",
-                     \\"letterSpacing\\": 1.5,
-                     \\"textAlign\\": \\"center\\",
-                   },
-                   Object {},
-                 ],
-               ]
-             }
-           >
-             DELETE
-           </Text>
-         </View>
-       </View>
-     </View>
-   </View>
  </View>"
`;

exports[`Reported Post call handleIgnore 1`] = `
"Snapshot Diff:
- First value
+ Second value

  <View
    style={
-     Array [
      Object {
        \\"alignItems\\": \\"center\\",
-         \\"backgroundColor\\": \\"#ffffff\\",
-         \\"borderRadius\\": 8,
-         \\"elevation\\": 4,
-         \\"flexDirection\\": \\"row\\",
-         \\"marginHorizontal\\": 16,
-         \\"marginVertical\\": 8,
-         \\"shadowColor\\": \\"#000000\\",
-         \\"shadowOffset\\": Object {
-           \\"height\\": 2,
-           \\"width\\": 0,
-         },
-         \\"shadowOpacity\\": 0.3,
-         \\"shadowRadius\\": 2,
-       },
-       Object {
-         \\"alignItems\\": \\"flex-start\\",
-         \\"backgroundColor\\": \\"#ffffff\\",
-         \\"flexDirection\\": \\"column\\",
-         \\"marginBottom\\": 8,
-         \\"marginHorizontal\\": 20,
-         \\"marginVertical\\": 15,
-       },
-     ]
-   }
- >
-   <View
-     style={
-       Object {
-         \\"borderBottomColor\\": \\"#ECEEF2\\",
-         \\"borderBottomWidth\\": 1,
-         \\"flexDirection\\": \\"row\\",
-         \\"padding\\": 15,
-       }
-     }
-   >
-     <View
-       style={
-         Array [
-           Object {},
-           Object {
-             \\"flex\\": 1,
-           },
-         ]
-       }
-     >
-       <Text
-         style={
-           Array [
-             Object {
-               \\"color\\": \\"#505256\\",
-             },
-             Object {
-               \\"fontFamily\\": \\"SourceSansPro-Regular\\",
-             },
-             Object {
-               \\"color\\": \\"#A0A2A6\\",
-             },
-           ]
-         }
-       >
-         Reported By
-         :
-       </Text>
-       <Text
-         numberOfLines={1}
-         style={
-           Array [
-             Object {
-               \\"color\\": \\"#505256\\",
-             },
-             Object {
-               \\"fontFamily\\": \\"SourceSansPro-Regular\\",
-             },
-             Object {
-               \\"color\\": \\"#505256\\",
-             },
-           ]
-         }
-       >
-         Roscoe Johnson
-       </Text>
-       <Text
-         numberOfLines={1}
-         style={
-           Array [
-             Object {
-               \\"color\\": \\"#505256\\",
-             },
-             Object {
-               \\"fontFamily\\": \\"SourceSansPro-Regular\\",
-             },
-             Object {
-               \\"color\\": \\"#505256\\",
-             },
-           ]
-         }
-       >
-         Stand-alone asymmetric service-desk
-       </Text>
-     </View>
-     <Text
-       onPress={[Function handleOpenPost]}
-       style={
-         Array [
-           Object {
-             \\"color\\": \\"#505256\\",
-           },
-           Object {
-             \\"fontFamily\\": \\"SourceSansPro-Regular\\",
-           },
-           Object {
-             \\"color\\": \\"#3CC8E6\\",
-           },
-         ]
-       }
-     >
-       Open Post
-     </Text>
-   </View>
-   <View
-     style={
-       Object {
-         \\"paddingHorizontal\\": 20,
-         \\"paddingTop\\": 12,
-       }
-     }
-   >
-     <View
-       style={
-         Object {
-           \\"flexDirection\\": \\"row\\",
-           \\"justifyContent\\": \\"flex-start\\",
-           \\"paddingVertical\\": 8,
-         }
-       }
-     >
-       <View
-         style={
-           Array [
-             Object {
-               \\"alignItems\\": \\"center\\",
-               \\"borderRadius\\": 18,
-               \\"flexDirection\\": \\"row\\",
-               \\"height\\": 36,
-               \\"justifyContent\\": \\"space-between\\",
-               \\"paddingLeft\\": 20,
-               \\"paddingRight\\": 16,
-               \\"paddingVertical\\": 0,
-             },
-             Object {
-               \\"backgroundColor\\": \\"#FD726D\\",
-             },
-             null,
-             null,
-           ]
-         }
-         testID=\\"HELP_REQUESTLabel\\"
-       >
-         <SvgMock
-           color=\\"#ffffff\\"
-           height={20}
-           style={
-             Array [
-               Object {
-                 \\"marginLeft\\": -10,
-                 \\"marginRight\\": 10,
-               },
-               undefined,
-             ]
-           }
-           width={20}
-         />
-         <Text
-           style={
-             Array [
-               Object {
-                 \\"color\\": \\"#505256\\",
-               },
-               Object {
-                 \\"fontFamily\\": \\"SourceSansPro-Regular\\",
-               },
-               Object {
-                 \\"color\\": \\"#ffffff\\",
-                 \\"fontSize\\": 14,
-                 \\"lineHeight\\": 20,
-               },
-             ]
-           }
-         >
-           Community Need
-         </Text>
-       </View>
-     </View>
-     <View
-       style={
-         Object {
-           \\"flexDirection\\": \\"row\\",
-           \\"justifyContent\\": \\"flex-start\\",
-           \\"paddingVertical\\": 8,
-         }
-       }
-     >
-       <Image
-         resizeMode=\\"cover\\"
-         source={
-           Object {
-             \\"uri\\": \\"debitis et saepe\\",
-           }
-         }
-         style={
-           Array [
-             Object {
-               \\"borderRadius\\": 24,
-               \\"height\\": 48,
-               \\"width\\": 48,
-             },
-             Object {
-               \\"backgroundColor\\": \\"rgb(135, 155, 115)\\",
-             },
-             undefined,
-           ]
-         }
-       />
-       <View
-         style={
-           Object {
-             \\"alignItems\\": \\"flex-start\\",
+       \\"flex\\": 0.6,
        \\"flexDirection\\": \\"column\\",
        \\"justifyContent\\": \\"center\\",
-             \\"paddingHorizontal\\": 8,
      }
    }
  >
+   <SvgMock />
    <Text
      style={
        Array [
          Object {
            \\"color\\": \\"#505256\\",
          },
          Object {
            \\"fontFamily\\": \\"SourceSansPro-Regular\\",
-               },
-               Array [
-                 Object {
-                   \\"color\\": \\"#007398\\",
-                   \\"fontSize\\": 16,
          },
          Object {
            \\"color\\": \\"#505256\\",
-                   \\"fontSize\\": 16,
-                   \\"fontWeight\\": \\"bold\\",
-                   \\"lineHeight\\": 20,
+           \\"fontSize\\": 24,
+           \\"fontWeight\\": \\"300\\",
+           \\"lineHeight\\": 30,
+           \\"paddingVertical\\": 20,
          },
-               ],
        ]
      }
    >
-           Keaton Keeling
+     Hurray
    </Text>
    <Text
      style={
        Array [
          Object {
            \\"color\\": \\"#505256\\",
          },
          Object {
            \\"fontFamily\\": \\"SourceSansPro-Regular\\",
-               },
-               Array [
-                 Object {
-                   \\"color\\": \\"#B2B0B2\\",
-                   \\"fontSize\\": 12,
          },
          Object {
-                   \\"color\\": \\"#B4B6BA\\",
-                   \\"fontSize\\": 12,
-                   \\"lineHeight\\": 16,
-                 },
-               ],
-             ]
-           }
-           testID=\\"Text\\"
-         >
-           August 19, 2018 @ 2:06 PM
-         </Text>
-       </View>
-     </View>
-   </View>
-   <View
-     style={
-       Object {
-         \\"paddingHorizontal\\": 20,
-         \\"paddingVertical\\": 8,
-       }
-     }
-   >
-     <View
-       style={Object {}}
-     >
-       <View
-         style={
-           Object {
-             \\"marginVertical\\": 10,
-           }
-         }
-       >
-         <Text
-           style={
-             Object {
            \\"color\\": \\"#505256\\",
-               \\"fontFamily\\": \\"SourceSansPro-Regular\\",
-               \\"fontSize\\": 14,
-               \\"lineHeight\\": 18,
-             }
-           }
-         >
-           <Text>
-             et porro ut
-           </Text>
-         </Text>
-       </View>
-     </View>
-   </View>
-   <Image
-     resizeMode=\\"cover\\"
-     source={
-       Object {
-         \\"uri\\": \\"et ipsam explicabo\\",
-       }
-     }
-     style={
-       Object {
-         \\"aspectRatio\\": 2,
-       }
-     }
-   />
-   <View
-     style={
-       Array [
-         Object {
-           \\"paddingTop\\": 20,
-         },
-         Object {
-           \\"flexDirection\\": \\"row\\",
+           \\"fontSize\\": 16,
+           \\"lineHeight\\": 24,
          },
        ]
      }
    >
-     <View
-       style={
-         Array [
-           Object {},
-           Object {
-             \\"flex\\": 1,
-           },
-         ]
-       }
-     >
-       <View
-         accessible={true}
-         focusable={true}
-         isTVSelectable={true}
-         onClick={[Function bound touchableHandlePress]}
-         onResponderGrant={[Function bound touchableHandleResponderGrant]}
-         onResponderMove={[Function bound touchableHandleResponderMove]}
-         onResponderRelease={[Function bound touchableHandleResponderRelease]}
-         onResponderTerminate={[Function bound touchableHandleResponderTerminate]}
-         onResponderTerminationRequest={[Function bound touchableHandleResponderTerminationRequest]}
-         onStartShouldSetResponder={[Function bound touchableHandleStartShouldSetResponder]}
-         style={
-           Object {
-             \\"opacity\\": 1,
-           }
-         }
-         testID=\\"ignoreButton\\"
-       >
-         <View
-           style={
-             Array [
-               Object {
-                 \\"alignItems\\": \\"center\\",
-                 \\"backgroundColor\\": \\"#52C5DC\\",
-                 \\"height\\": 60,
-                 \\"justifyContent\\": \\"center\\",
-               },
-               null,
-               Object {
-                 \\"borderBottomLeftRadius\\": 8,
-                 \\"borderRightColor\\": \\"#ffffff\\",
-                 \\"borderRightWidth\\": 1,
-                 \\"height\\": 50,
-               },
-               null,
-             ]
-           }
-         >
-           <Text
-             style={
-               Array [
-                 Object {
-                   \\"color\\": \\"#505256\\",
-                 },
-                 Object {
-                   \\"fontFamily\\": \\"SourceSansPro-Regular\\",
-                 },
-                 Array [
-                   Object {
-                     \\"backgroundColor\\": \\"rgba(0,0,0,0)\\",
-                     \\"color\\": \\"#ffffff\\",
-                     \\"fontSize\\": 14,
-                     \\"fontWeight\\": \\"500\\",
-                     \\"letterSpacing\\": 1.5,
-                     \\"textAlign\\": \\"center\\",
-                   },
-                   Object {},
-                 ],
-               ]
-             }
-           >
-             IGNORE
+     You have successfully ignored the post.
    </Text>
-         </View>
-       </View>
-     </View>
-     <View
-       style={
-         Array [
-           Object {},
-           Object {
-             \\"flex\\": 1,
-           },
-         ]
-       }
-     >
-       <View
-         accessible={true}
-         focusable={true}
-         isTVSelectable={true}
-         onClick={[Function bound touchableHandlePress]}
-         onResponderGrant={[Function bound touchableHandleResponderGrant]}
-         onResponderMove={[Function bound touchableHandleResponderMove]}
-         onResponderRelease={[Function bound touchableHandleResponderRelease]}
-         onResponderTerminate={[Function bound touchableHandleResponderTerminate]}
-         onResponderTerminationRequest={[Function bound touchableHandleResponderTerminationRequest]}
-         onStartShouldSetResponder={[Function bound touchableHandleStartShouldSetResponder]}
-         style={
-           Object {
-             \\"opacity\\": 1,
-           }
-         }
-         testID=\\"deleteButton\\"
-       >
-         <View
-           style={
-             Array [
-               Object {
-                 \\"alignItems\\": \\"center\\",
-                 \\"backgroundColor\\": \\"#52C5DC\\",
-                 \\"height\\": 60,
-                 \\"justifyContent\\": \\"center\\",
-               },
-               null,
-               Object {
-                 \\"borderBottomRightRadius\\": 8,
-                 \\"height\\": 50,
-               },
-               null,
-             ]
-           }
-         >
-           <Text
-             style={
-               Array [
-                 Object {
-                   \\"color\\": \\"#505256\\",
-                 },
-                 Object {
-                   \\"fontFamily\\": \\"SourceSansPro-Regular\\",
-                 },
-                 Array [
-                   Object {
-                     \\"backgroundColor\\": \\"rgba(0,0,0,0)\\",
-                     \\"color\\": \\"#ffffff\\",
-                     \\"fontSize\\": 14,
-                     \\"fontWeight\\": \\"500\\",
-                     \\"letterSpacing\\": 1.5,
-                     \\"textAlign\\": \\"center\\",
-                   },
-                   Object {},
-                 ],
-               ]
-             }
-           >
-             DELETE
-           </Text>
-         </View>
-       </View>
-     </View>
-   </View>
  </View>"
`;

exports[`Reported comment call handleDelete 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 0.6,
      "flexDirection": "column",
      "justifyContent": "center",
    }
  }
>
  <SvgMock />
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Object {
          "color": "#505256",
          "fontSize": 24,
          "fontWeight": "300",
          "lineHeight": 30,
          "paddingVertical": 20,
        },
      ]
    }
  >
    Hurray
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Object {
          "color": "#505256",
          "fontSize": 16,
          "lineHeight": 24,
        },
      ]
    }
  >
    You have successfully deleted the comment.
  </Text>
</View>
`;

exports[`Reported comment call handleIgnore 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 0.6,
      "flexDirection": "column",
      "justifyContent": "center",
    }
  }
>
  <SvgMock />
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Object {
          "color": "#505256",
          "fontSize": 24,
          "fontWeight": "300",
          "lineHeight": 30,
          "paddingVertical": 20,
        },
      ]
    }
  >
    Hurray
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Object {
          "color": "#505256",
          "fontSize": 16,
          "lineHeight": 24,
        },
      ]
    }
  >
    You have successfully ignored the comment.
  </Text>
</View>
`;

exports[`renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderRadius": 8,
        "elevation": 4,
        "flexDirection": "row",
        "marginHorizontal": 16,
        "marginVertical": 8,
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 2,
      },
      Object {
        "alignItems": "flex-start",
        "backgroundColor": "#ffffff",
        "flexDirection": "column",
        "marginBottom": 8,
        "marginHorizontal": 20,
        "marginVertical": 15,
      },
    ]
  }
>
  <View
    style={
      Object {
        "borderBottomColor": "#ECEEF2",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "padding": 15,
      }
    }
  >
    <View
      style={
        Array [
          Object {},
          Object {
            "flex": 1,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#A0A2A6",
            },
          ]
        }
      >
        Reported By
        :
      </Text>
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#505256",
            },
          ]
        }
      >
        Hayden Zieme
      </Text>
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#505256",
            },
          ]
        }
      >
        Integrated user-facing intranet
      </Text>
    </View>
    <Text
      onPress={[Function]}
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#3CC8E6",
          },
        ]
      }
    >
      Open Post
    </Text>
  </View>
  <View
    style={
      Object {
        "paddingTop": 15,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "paddingHorizontal": 30,
          "paddingVertical": 8,
        }
      }
    >
      <Image
        resizeMode="cover"
        source={
          Object {
            "uri": "qui amet iure",
          }
        }
        style={
          Array [
            Object {
              "borderRadius": 18,
              "height": 36,
              "width": 36,
            },
            Object {
              "backgroundColor": "rgb(161, 123, 130)",
            },
            undefined,
          ]
        }
      />
      <View
        style={
          Object {
            "paddingLeft": 10,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "flex-end",
              "flexDirection": "row",
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Object {
                  "paddingRight": 6,
                },
              ]
            }
          >
            Darwin Bosco
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Array [
                  Object {
                    "color": "#B2B0B2",
                    "fontSize": 12,
                  },
                  Object {},
                ],
              ]
            }
            testID="Text"
          >
            January 19, 2010 @ 12:03 PM
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Array [
                  Object {
                    "color": "#B2B0B2",
                    "fontSize": 12,
                  },
                  Object {
                    "paddingHorizontal": 2,
                  },
                ],
              ]
            }
          >
             • 
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Object {
                  "color": "#B2B0B2",
                  "fontSize": 12,
                },
              ]
            }
          >
            Edited
          </Text>
        </View>
        <View
          style={
            Array [
              Object {
                "alignSelf": "flex-start",
                "backgroundColor": "#ECEEF2",
                "borderRadius": 8,
                "marginVertical": 5,
                "paddingHorizontal": 13,
                "paddingVertical": 8,
              },
              undefined,
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Object {},
              ]
            }
          >
            alias consequuntur corporis
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "paddingTop": 20,
        },
        Object {
          "flexDirection": "row",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {},
          Object {
            "flex": 1,
          },
        ]
      }
    >
      <View
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="ignoreButton"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#52C5DC",
                "height": 60,
                "justifyContent": "center",
              },
              null,
              Object {
                "borderBottomLeftRadius": 8,
                "borderRightColor": "#ffffff",
                "borderRightWidth": 1,
                "height": 50,
              },
              null,
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Array [
                  Object {
                    "backgroundColor": "rgba(0,0,0,0)",
                    "color": "#ffffff",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 1.5,
                    "textAlign": "center",
                  },
                  Object {},
                ],
              ]
            }
          >
            IGNORE
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Array [
          Object {},
          Object {
            "flex": 1,
          },
        ]
      }
    >
      <View
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="deleteButton"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#52C5DC",
                "height": 60,
                "justifyContent": "center",
              },
              null,
              Object {
                "borderBottomRightRadius": 8,
                "height": 50,
              },
              null,
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Array [
                  Object {
                    "backgroundColor": "rgba(0,0,0,0)",
                    "color": "#ffffff",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 1.5,
                    "textAlign": "center",
                  },
                  Object {},
                ],
              ]
            }
          >
            DELETE
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
